--- a/index.html
+++ b/index.html
@@ -81,23 +81,31 @@
                 <ul class="list grid">
                     <li class="team-grid grid-item">
                         <img src="./images/igor-demyanenko.jpg" alt="фото дизайнера продукта нашей компании" width="270" height="260">
-                        <h3 class="employee">Игорь Демьяненко</h3> 
-                        <p class="text-team">Product Designer</p>
+                        <div class="team-item-content">
+                            <h3 class="employee">Игорь Демьяненко</h3> 
+                            <p class="text-team">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-grid grid-item">
                         <img src="./images/olga-repina.jpg" alt="фото фронтент разработчика сотрудника нашей компании" width="270" height="260">
-                        <h3 class="employee">Ольга Репина</h3>
-                        <p class="text-team">Frontend Developer</p>
+                        <div class="team-item-content">
+                            <h3  class="employee">Ольга Репина</h3>
+                            <p class="text-team">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-grid grid-item">
                         <img src="./images/nikolay-tarasov.jpg" alt="фото маркетолога сотрудника нашей компании" width="270" height="260">
-                        <h3 class="employee">Николай Тарасов</h3>
-                        <p class="text-team">Marketing</p>
+                        <div class="team-item-content">
+                            <h3 class="employee">Николай Тарасов</h3>
+                            <p class="text-team">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-grid grid-item">
                         <img src="./images/mikhail-yermakov.jpg" alt="фото Ю Ай дизайнера нашей компании" width="270" height="260">
-                        <h3 class="employee">Михаил Ермаков</h3>
-                        <p class="text-team">UI Designer</p>
+                        <div class="team-item-content">
+                            <h3 class="employee">Михаил Ермаков</h3>
+                            <p class="text-team">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
