For checking hw4
svg

--- a/index.html
+++ b/index.html
@@ -17,21 +17,39 @@
             <nav class="navigation">
                 <a class="logo link" href="./index.html"> <span class="accent-logo">Web</span>Studio</a>
                 <ul class="site-nav list">
-                    <li class="item-nav"> <a class="item-nav link current" href="./index.html">Студия</a></li>
-                    <li class="item-nav"> <a class="item-nav link" href="./portfolio.html">Портфолио</a></li>
-                    <li class="item-nav"> <a class="item-nav link" href="">Контакты</a></li>
+                    <li class="item-nav">
+                        <a class="item-nav link current" href="./index.html">Студия</a>
+                    </li>
+                    <li class="item-nav">
+                        <a class="item-nav link" href="./portfolio.html">Портфолио</a>
+                    </li>
+                    <li class="item-nav">
+                        <a class="item-nav link" href="">Контакты</a>
+                    </li>
                 </ul>
             </nav> 
             <ul class="contact list">
-                <li class="contact-item"><a class="item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="contact-item"><a class="item link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="contact-item">
+                    <a class="link-contact link" href="mailto:info@devstudio.com">
+                        <svg class="icon" width="16" height="12">
+                            <use href="./images/svg/sprite.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com
+                    </a>
+                </li>
+                <li class="contact-item">
+                    <a class="link-contact link" href="tel:+380961111111">
+                        <svg class="icon" width="10" height="16">
+                            <use href="./images/svg/sprite.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11
+                    </a>
+                </li>
             </ul>
         </div>
     </header>
      
     <main>
         <section class="hero">
-            <div class="container hero-container">
+            <div class="hero-container">
                 <h1 class="page-title">Эффективные решения<br>для вашего бизнеса</h1>
                 <button class="button order" type="button">Заказать услугу</button>
             </div>
@@ -41,19 +59,19 @@
         <section class="advantages">
             <div class="container">
                 <ul class="list advantages-grid grid">
-                    <li class="advantages-list grid-item">
+                    <li class="advantages-list grid-item icon-antenna">
                         <h3 class="advantages-title">Внимание к деталям</h3>
                         <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="advantages-list grid-item">
+                    <li class="advantages-list grid-item icon-clock">
                         <h3 class="advantages-title">Пунктуальность</h3>
                         <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="advantages-list grid-item">
+                    <li class="advantages-list grid-item icon-diagram">
                         <h3 class="advantages-title">Планирование</h3>
                         <p class="advantages-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="advantages-list grid-item">
+                    <li class="advantages-list grid-item icon-astronaut">
                         <h3 class="advantages-title">Современные технологии</h3>
                         <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -84,6 +102,36 @@
                         <div class="team-item-content">
                             <h3 class="employee">Игорь Демьяненко</h3> 
                             <p class="text-team">Product Designer</p>
+                            <ul class="list social-icons">
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-grid grid-item">
@@ -91,6 +139,36 @@
                         <div class="team-item-content">
                             <h3  class="employee">Ольга Репина</h3>
                             <p class="text-team">Frontend Developer</p>
+                            <ul class="list social-icons">
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-grid grid-item">
@@ -98,6 +176,36 @@
                         <div class="team-item-content">
                             <h3 class="employee">Николай Тарасов</h3>
                             <p class="text-team">Marketing</p>
+                            <ul class="list social-icons">
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-grid grid-item">
@@ -105,25 +213,143 @@
                         <div class="team-item-content">
                             <h3 class="employee">Михаил Ермаков</h3>
                             <p class="text-team">UI Designer</p>
+                            <ul class="list social-icons">
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons-item">
+                                    <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="icon">
+                                            <use href="./images/svg/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
+            </div>
+        </section>
+
+
+        <section class="clients">
+            <div class="container">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <ul class="list clients-list grid">
+                    <li class="client-item grid-item">
+                        <a href="" class="client-link link" target="_blank" rel="noopener noreferrer">
+                            <svg class="client-icon" width="44" height="49">
+                                <use href="./images/svg/sprite.svg#icon-logo-one" width="44" height="49"></use>
+                            </svg>
+                        </a>
+                        </li>
+                    <li class="client-item grid-item">
+                        <a href="" class="client-link link" target="_blank" rel="noopener noreferrer">
+                            <svg class="client-icon" width="40" height="52">
+                                <use href="./images/svg/sprite.svg#icon-logo-two"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item grid-item">
+                        <a href="" class="client-link link" target="_blank" rel="noopener noreferrer">
+                            <svg class="client-icon" width="41" height="42.6">
+                                <use href="./images/svg/sprite.svg#icon-logo-three"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item grid-item">
+                        <a href="" class="client-link link" target="_blank" rel="noopener noreferrer">
+                            <svg class="client-icon" width="79.66" height="42.02">
+                                <use href="./images/svg/sprite.svg#icon-logo-four"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item grid-item">
+                        <a href="" class="client-link link" target="_blank" rel="noopener noreferrer">
+                            <svg class="client-icon" width="79.66" height="42.02">
+                                <use href="./images/svg/sprite.svg#icon-logo-five"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item grid-item">
+                        <a href="" class="client-link link" target="_blank" rel="noopener noreferrer">
+                            <svg class="client-icon" width="88.48" height="45.44">
+                                <use href="./images/svg/sprite.svg#icon-logo-six"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+
             </div>
         </section>
     </main>
 
 
     <footer class="footer">
-        <div class="container">
-            <a class="logo link" href="./index.html"> <span class="accent-logo">Web</span>Studio</a>
-            <address class="address">
-                <p class="street-address"> г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="contact list">
-                    <li class="item-address"> <a class="item link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                    <li class="item-address"> <a class="item link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
+        <ul class="container list grid">
+            <li class="grid-item footer-grid">
+                <a class="logo link" href="./index.html"> <span class="accent-logo">Web</span>Studio</a>
+                <address class="address">
+                    <p class="street-address"> г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="contact list">
+                        <li class="item-address"> <a class="item link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                        <liclass="item-address"> <a class="item link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
+                    </ul>
+                </address>
+            </li>
+            <li class="grid-item footer-grid">
+                <h3 class="footer-title">Присоединяйтесь</h3>
+                <ul class="list social-icons">
+                    <li class="social-icons-item">
+                        <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                            <svg class="icon">
+                                <use href="./images/svg/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icons-item">
+                        <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                            <svg class="icon">
+                                <use href="./images/svg/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icons-item">
+                        <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                            <svg class="icon">
+                                <use href="./images/svg/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icons-item">
+                        <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                            <svg class="icon">
+                                <use href="./images/svg/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
-        </div>
+
+            </li>
+        <ul>
     </footer>
     
 </body>
