--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
                 <a class="logo link" href="./index.html"> <span class="accent-logo">Web</span>Studio</a>
                 <ul class="site-nav list">
                     <li class="item-nav">
-                        <a class="item-nav link current" href="./index.html">Студия</a>
+                        <a class="item-nav link" href="./index.html">Студия</a>
                     </li>
                     <li class="item-nav">
-                        <a class="item-nav link" href="./portfolio.html">Портфолио</a>
+                        <a class="item-nav link current" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="item-nav">
                         <a class="item-nav link" href="">Контакты</a>
@@ -61,72 +61,72 @@
                     <li class="item-filter"><button type="button" class="button filter">Веб-сайты</button></li>
                 </ul>            
                 <ul class="portfolio list grid">
-                    <li class="grid-item portfolio-item">
-                        <a class="link" href=""><img src="./images/portfolio/project001.jpg" alt="ноутбук с открытым сайтом" width="370" height="294">
+                    <li class="grid-item ">
+                        <a class="link portfolio-link" href=""><img src="./images/portfolio/project001.jpg" alt="ноутбук с открытым сайтом" width="370" height="294">
                         <div class="portfolio-content">
                             <h2 class="portfolio-title">Технокряк</h2>
                             <p class="text">Веб-сайт</p>
                         </div>
                         </a>
                     </li>
-                    <li class="grid-item portfolio-item">
-                        <a class="link" href=""><img src="./images/portfolio/project002.jpg" alt="фото двух баскетболистов с мячём" width="370" height="294">
+                    <li class="grid-item">
+                        <a class="link portfolio-link" href=""><img src="./images/portfolio/project002.jpg" alt="фото двух баскетболистов с мячём" width="370" height="294">
                         <div class="portfolio-content">
                             <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                             <p class="text">Дизайн</p>
                         </div>
                         </a>
                     </li>
-                    <li class="grid-item portfolio-item">
-                        <a class="link" href=""><img src="./images/portfolio/project003.jpg" alt="логотип ресторана" width="370" height="294">
+                    <li class="grid-item">
+                        <a class="link portfolio-link" href=""><img src="./images/portfolio/project003.jpg" alt="логотип ресторана" width="370" height="294">
                         <div class="portfolio-content">
                             <h2 class="portfolio-title">Ресторан Seafood</h2>
                             <p class="text">Приложение</p>
                         </div>
                         </a>
                     </li>
-                    <li class="grid-item portfolio-item">
-                        <a class="link" href=""><img src="./images/portfolio/project004.jpg" alt="наушники чёрного цвета" width="370" height="294">
+                    <li class="grid-item">
+                        <a class="link portfolio-link" href=""><img src="./images/portfolio/project004.jpg" alt="наушники чёрного цвета" width="370" height="294">
                         <div class="portfolio-content">
                             <h2 class="portfolio-title">Проект Prime</h2>
                             <p class="text">Маркетинг</p>
                         </div>
                         </a>
                     </li>
-                    <li class="grid-item portfolio-item">
-                        <a class="link" href=""><img src="./images/portfolio/project005.jpg" alt="две коробки, белого и бежевого цвета" width="370" height="294">
+                    <li class="grid-item">
+                        <a class="link portfolio-link" href=""><img src="./images/portfolio/project005.jpg" alt="две коробки, белого и бежевого цвета" width="370" height="294">
                         <div class="portfolio-content">
                             <h2 class="portfolio-title">Проект Boxes</h2>
                             <p class="text">Приложение</p>
                         </div>
                         </a>
                     </li>
-                    <li class="grid-item portfolio-item">
-                        <a class="link" href=""><img src="./images/portfolio/project006.jpg" alt="монитор с включённым сайтом" width="370" height="294">
+                    <li class="grid-item">
+                        <a class="link portfolio-link" href=""><img src="./images/portfolio/project006.jpg" alt="монитор с включённым сайтом" width="370" height="294">
                         <div class="portfolio-content">
                             <h2 class="portfolio-title">Inspiration has no Borders</h2>
                             <p class="text">Веб-сайт</p>
                         </div>
                         </a>
                     </li>
-                    <li class="grid-item portfolio-item">
-                        <a class="link" href=""><img src="./images/portfolio/project007.jpg" alt="книга с открытым разворотом" width="370" height="294">
+                    <li class="grid-item">
+                        <a class="link portfolio-link" href=""><img src="./images/portfolio/project007.jpg" alt="книга с открытым разворотом" width="370" height="294">
                         <div class="portfolio-content">
                             <h2 class="portfolio-title">Издание Limited edition</h2>
                             <p class="text">Дизайн</p>
                         </div>
                         </a>
                     </li>
-                    <li class="grid-item portfolio-item">
-                        <a class="link" href=""><img src="./images/portfolio/project008.jpg" alt="бирка с рекламным слоганом" width="370" height="294">
+                    <li class="grid-item">
+                        <a class="link portfolio-link" href=""><img src="./images/portfolio/project008.jpg" alt="бирка с рекламным слоганом" width="370" height="294">
                         <div class="portfolio-content">
                             <h2 class="portfolio-title">Проект LAB</h2>
                             <p class="text">Маркетинг</p>
                         </div>
                         </a>
                     </li>
-                    <li class="grid-item portfolio-item">
-                        <a class="link" href=""><img src="./images/portfolio/project009.jpg" alt="работающий на ноутбуке человек" width="370" height="294">
+                    <li class="grid-item">
+                        <a class="link portfolio-link" href=""><img src="./images/portfolio/project009.jpg" alt="работающий на ноутбуке человек" width="370" height="294">
                         <div class="portfolio-content">
                             <h2 class="portfolio-title">Growing Business</h2>
                             <p class="text">Приложене</p>
